--- a/parsedmarc/parsedmarc.ini
+++ b/parsedmarc/parsedmarc.ini
@@ -3,6 +3,12 @@ save_aggregate = True
 save_forensic = True
 output = /output/
 
+[imap]
+host = mail.domain.com
+user = reports@dmarc.domain.com
+password = <password>
+watch = True
+
 [elasticsearch]
 hosts = elasticsearch:9200
 ssl = False
