--- a/dmarc-visualizer.yml
+++ b/dmarc-visualizer.yml
@@ -22,3 +22,5 @@ services:
       - GF_AUTH_ANONYMOUS_ENABLED=false
       - GF_SECURITY_ADMIN_USER=<user>
       - GF_SECURITY_ADMIN_PASSWORD=<password>
+      - GF_DEFAULT_INSTANCE_NAME=DMARC Reporter
+      - GF_DEFAULT_HOME_DASHBOARD_PATH=/var/lib/grafana/dashboards/Grafana-DMARC_Reports.json
